<resources>
    <string name="app_name">Fireshare</string>

    <!-- Misc -->
    <string name="actionDelete">Delete</string>
    <string name="actionCancel">Cancel</string>
    <string name="actionYes">Yes</string>
    <string name="unknown_error">Unknown error occurred</string>

    <!-- Main menu -->
    <string name="timeline">Timeline</string>
    <string name="discovery">Discovery</string>
    <string name="add">Add</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>

    <!-- Auth Screen - Errors -->
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
    <string name="error_unknown">An unknown error occurred</string>

    <!-- Auth options -->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <!-- Login screen -->
    <string name="login_title">Welcome back</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>

    <!-- Register screen -->
    <string name="register_title">Hey, get on board</string>
    <string name="register_subtitle">Sign up to continue</string>
    <string name="full_name">Enter your full name</string>
    <string name="username">Enter your username</string>
    <string name="location">Enter your location</string>
    <string name="bio">Enter your bio</string>
    <string name="repeated_password">Confirm your password</string>
    <string name="success_registration">Successfully registered account</string>

    <!-- Add post screen -->
    <string name="choose_image">Choose image</string>
    <string name="enter_post_text">Enter post text…</string>
    <string name="post">Post</string>
    <string name="error_no_image_chosen">Please choose an image for the post</string>

    <!-- Profile screen -->
    <string name="no_description">No Description</string>
    <string name="no_location">No Location</string>
    <string name="profile_updated">Profile updated</string>
    <string name="update_profile">Update profile</string>
    <string name="label_username">\u0040%s</string>

    <!-- Log out dialog -->
    <string name="logoutDialogTitle">Log out</string>
    <string name="logoutDialogSubtitle">Are you sure you want to log out?</string>

    <!-- Single post detail -->
    <string name="single_post_no_likes">No likes</string>
    <string name="single_post_one_like">1 like</string>
    <string name="single_post_multiple_likes">%d likes</string>
    <string name="single_post_no_comments">No comments</string>
    <string name="single_post_one_comment">1 comment</string>
    <string name="single_post_multiple_comments">%d comments</string>
    <string name="single_post_menu_option_edit">Edit post</string>
    <string name="single_post_menu_option_delete">Delete post</string>
    <string name="single_post_menu_option_share">Share to…</string>
    <string name="single_post_menu_option_copy_link">Copy link</string>

    <!-- Search screen -->
    <string name="search_users_placeholder">Search for users</string>

    <!-- Timeline screen -->
    <string name="timeline_placeholder">Ooops! Seems you do not follow anyone. Go to discovery screen, search for people and see this screen populated within seconds</string>

    <!-- Post dialog -->
    <string name="delete_post_dialog_title">Delete post</string>
    <string name="delete_post_dialog_subtitle">Are you sure you want to delete this post?</string>

    <!-- Comment dialog -->
    <string name="delete_comment_dialog_title">Delete comment</string>
    <string name="delete_comment_dialog_subtitle">Are you sure you want to remove this comment?</string>

    <!-- Comments screen -->
    <string name="hint_enter_comment">Enter your comment</string>
    <string name="description_add_comment">Add your comment</string>
    <string name="comments_dialog_edit_comment">Edit comment</string>
    <string name="comments_dialog_delete_comment">Delete comment</string>

    <!-- Notification feed item -->
    <string name="labelFeedItemTitle"><![CDATA[<b>%s</b> %s]]></string>
    <string name="labelFeedItemLikePlaceholder">liked your post</string>
    <string name="labelFeedItemFollowPlaceholder">is following you</string>
    <string name="labelFeedItemCommentPlaceholder">replied: "%s"</string>

</resources>